<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_laban"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/icon_report"
        android:title="@string/activity" />

    <item
        android:enabled="true"
        android:id="@+id/navigation_pay"
        android:icon="@drawable/icon_wallet"
        android:title="@string/pay" />

    <item
        android:id="@+id/navigation_email"
        android:icon="@drawable/icon_boxmess"
        android:title="@string/mailbox" />

    <item
        android:id="@+id/navigation_accout"
        android:icon="@drawable/icon_user"
        android:title="@string/account" />

</menu>
