<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAccountUpdate"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_gravity="center"
            android:src="@drawable/iconadmin" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNameAccountUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input"
            android:hint="@string/name"
            android:padding="10dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailAccountUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input"
            android:hint="@string/email"
            android:padding="10dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhoneAccountUpdate"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input"
            android:hint="@string/phone"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnUpdateAccountNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button_bookcar"
            android:text="@string/update"
            android:textColor="@color/ic_launcher_background"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnUpdateAccountCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_bookcar"
            android:text="@string/cancel"
            android:textColor="@color/ic_launcher_background"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>