<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imgBackRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:backgroundTint="#000"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_arrow_back_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/btn_signup"
        android:textColor="#212B47"
        android:textSize="50dp"
    android:textStyle="bold" >

    </TextView>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/race"
            >

        </ImageView>

        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true"
            android:elevation="50dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#ffff"
                android:orientation="vertical">

                <TextView
                    android:letterSpacing=".1"
                    android:textColor="#000"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/username"
                    android:textColor="#000"
                    android:textSize="18sp">

                </TextView>

                <EditText

                    android:id="@+id/edtUserNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/username"
                    android:importantForAutofill="no">

                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/email"
                    android:textColor="#000"
                    android:textSize="18sp">

                </TextView>

                <EditText
                    android:id="@+id/edtEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email">

                </EditText>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/password"
                    android:textColor="#000"
                    android:textSize="18sp">

                </TextView>

                <EditText
                    android:id="@+id/edtPassRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password">

                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Phone"
                    android:textColor="#000"
                    android:textSize="18sp">

                </TextView>

                <EditText
                    android:id="@+id/edtPhoneRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Phone">

                </EditText>

                <Button
                    android:layout_margin="10dp"
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/fullapp"
                    android:background="@drawable/custom_button_login"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="18sp">

                </Button>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
